# pythagora

./: .gitignore  README.md  agents.py  controls.py  experiments.py  generate.py  groups.py  logger.py  marketspace.py  pyproject.toml  pythagora_tutorial.ipynb  scalefree.py  smallworld.py
JOSS/: paper.bib  paper.md
docs/: all-documents.html  classIndex.html  fullsearchindex.json  index.html  moduleIndex.html  nameIndex.html  objects.inv  pythagora.agents.Buyer.html  pythagora.agents.Seller.html  pythagora.agents.html  pythagora.controls.html  pythagora.experiments.html  pythagora.generate.html  pythagora.groups.Community.html  pythagora.groups.CommunitySet.html  pythagora.groups.html  pythagora.logger.Logger.html  pythagora.logger.html  pythagora.market.html  pythagora.scalefree.html  pythagora.smallworld.html  searchindex.json  undoccedSummary.html
docs/api/: all-documents.html  classIndex.html  fullsearchindex.json  index.html  moduleIndex.html  nameIndex.html  pythagora.agents.Seller.html  pythagora.controls.html  pythagora.experiments.html  pythagora.generate.html  pythagora.groups.Community.html  pythagora.groups.CommunitySet.html  pythagora.groups.html  pythagora.logger.Logger.html  pythagora.logger.html  pythagora.market.html  pythagora.smallworld.html
src/pythagora/: __init__.py  agents.py  controls.py  experiments.py  generate.py  groups.py  logger.py  market.py  scalefree.py  smallworld.py
src/pythagora.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
